# Nova-Forge-editor

./: README.md
crates/atlas_editor_app/src/: main.rs
crates/atlas_editor_content/src/: lib.rs
crates/atlas_editor_core/src/: lib.rs
crates/atlas_editor_details/src/: lib.rs
crates/atlas_editor_log/src/: lib.rs
crates/atlas_editor_outliner/src/: lib.rs
crates/atlas_editor_play/src/: lib.rs
crates/atlas_editor_ui/src/: lib.rs
crates/atlas_editor_viewport/src/: lib.rs
crates/atlas_editor_voxel_tools/src/: lib.rs
crates/atlas_editor_world_settings/src/: lib.rs
crates/atlas_voxel_planet/src/: components.rs  config.rs  crafting.rs  hud.rs  inventory.rs  lib.rs  minimap.rs  npc.rs  planet.rs  wildlife.rs
novaforge/: Cargo.toml
novaforge/crates/nf_commands/src/: lib.rs
novaforge/crates/nf_editor_app/: Cargo.toml
novaforge/crates/nf_editor_app/src/: main.rs
novaforge/crates/nf_editor_core/src/: lib.rs
novaforge/crates/nf_editor_details/src/: lib.rs
novaforge/crates/nf_editor_log/: Cargo.toml
novaforge/crates/nf_editor_log/src/: lib.rs
novaforge/crates/nf_editor_outliner/src/: lib.rs
novaforge/crates/nf_editor_play/src/: lib.rs
novaforge/crates/nf_editor_scene/: Cargo.toml
novaforge/crates/nf_editor_scene/src/: lib.rs
novaforge/crates/nf_editor_ui/: Cargo.toml
novaforge/crates/nf_editor_ui/src/: lib.rs
novaforge/crates/nf_editor_voxel_tools/: Cargo.toml
novaforge/crates/nf_editor_voxel_tools/src/: lib.rs
novaforge/crates/nf_gizmos/: Cargo.toml
src/: config.rs  player.rs  solar_system.rs  vegetation.rs
(+6 files in other folders)
