[package]
name    = "nf_editor_voxel_tools"
version = "0.1.0"
edition = "2021"
description = "Voxel editing tools panel: palette, brush, ray-cast place/remove/paint, and undo commands."

[dependencies]
bevy          = { workspace = true }
bevy_egui     = { workspace = true }
nf_editor_core  = { workspace = true }
nf_selection    = { workspace = true }
nf_voxel_planet = { workspace = true }
nf_commands     = { workspace = true }
